@@ -3,8 +3,8 @@ package com.example.demo.controller;
 import com.example.demo.dto.AuthRequest;
 import com.example.demo.dto.AuthResponse;
 import com.example.demo.entity.User;
-import com.example.demo.service.UserService;
 import com.example.demo.security.JwtUtil;
+import com.example.demo.service.UserService;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -16,28 +16,27 @@ public class AuthController {
     private final UserService userService;
     private final JwtUtil jwtUtil;
 
-    // ✅ Constructor Injection (as per rules)
     public AuthController(UserService userService, JwtUtil jwtUtil) {
         this.userService = userService;
         this.jwtUtil = jwtUtil;
     }
 
-    // ✅ REGISTER API
+    // ✅ REGISTER
     @PostMapping("/register")
     public ResponseEntity<User> register(@RequestBody User user) {
         User savedUser = userService.register(user);
         return ResponseEntity.ok(savedUser);
     }
 
-    // ✅ LOGIN API
+    // ✅ LOGIN
     @PostMapping("/login")
     public ResponseEntity<AuthResponse> login(@RequestBody AuthRequest request) {
 
         User user = userService.findByEmail(request.getEmail());
 
-        // Password check is handled in service / security layer
+        // generate JWT token
         String token = jwtUtil.generateToken(
-                Map.of("role", user.getRole()),
+                java.util.Collections.singletonMap("role", user.getRole()),
                 user.getEmail()
         );
 
